--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -28,7 +28,7 @@
           <span class="info-titulo">Quantidade Total</span>
           <br />
           <span class="info-dados">{{
-            this.nonComplicanceService.nc.quant_total || "Não se Aplica"
+            this.nonComplicanceService.nc.quant_total || "0"
           }}</span>
         </div>
       </div>
@@ -38,7 +38,7 @@
           <span class="info-titulo">Quantidade em Não Conformidade</span>
           <br />
           <span class="info-dados">{{
-            this.nonComplicanceService.nc.quant_nc || "Não se Aplica"
+            this.nonComplicanceService.nc.quant_nc || "0"
           }}</span>
         </div>
       </div>
