--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -3,21 +3,21 @@
     <div class="d-flex">
       <button type="button" class="btn btn-dark" (click)="salvarNc('home')">
         <i class="pi pi-home"></i>
-        Início
+        {{'global.home'| translate}}
       </button>
       <div class="text-box">
-        <p>Nova Não Conformidade</p>
+        <p>{{'newNC.header'| translate}}</p>
       </div>
     </div>
   </div>
   <div class="d-flex justify-content-end p-0">
     <div class="d-flex buttons">
       <button type="button" (click)="openCancelDialog()" class="btn btn-outline-dark mr-2">
-        Cancelar
+        {{'global.cancel'| translate}}
         <i class="pi pi-times"></i>
       </button>
       <button type="button" class="btn btn-dark mr-2" (click)="salvarNc('save')">
-        Salvar
+        {{'global.save'| translate}}
         <i class="pi pi-save"></i>
       </button>
     </div>
