--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center" *ngIf="carregou" >
-    <app-cost-sector></app-cost-sector>
+<div class="d-flex justify-content-center" *ngIf="carregou()" >
+    <app-nc-emissor></app-nc-emissor>
 </div>
 
 
