--- a/src/app/pages/ncs/list/ncs-list.component.css
+++ b/src/app/pages/ncs/list/ncs-list.component.css
@@ -17,7 +17,8 @@
 
 
 ::ng-deep text  {
-    font-size: 14px !important;
+    font-size: 25px !important;
+    y:0 !important;
 }
 
 ::ng-deep .legend-label  {
