--- a/src/app/pages/dashboards/charts/nc-status/nc-status.component.html
+++ b/src/app/pages/dashboards/charts/nc-status/nc-status.component.html
@@ -1,18 +1,27 @@
-<div class="mb-5">
-  <p-dropdown [options]="setores" [(ngModel)]="setor" (onChange)=" popular()"></p-dropdown>
-</div>
+<div class="d-flex flex-column justify-content-center align-items-start">
+  <div class="d-flex justify-content-center" style="width: 100%">
+    <h2>Status das Ncs</h2>
+  </div>
+  <div class="mb-5">
+    <p-dropdown
+      [options]="setores"
+      [(ngModel)]="setor"
+      (onChange)="popular()"
+    ></p-dropdown>
+  </div>
 
-<ngx-charts-bar-vertical
-  [view]="size"
-  [results]="single"
-  [gradient]="gradient"
-  [xAxis]="showXAxis"
-  [yAxis]="showYAxis"
-  [legend]="showLegend"
-  [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel"
-  [xAxisLabel]="xAxisLabel"
-  [yAxisLabel]="yAxisLabel"
-  (select)="onSelect($event)"
->
-</ngx-charts-bar-vertical>
+  <ngx-charts-bar-vertical
+    [view]="size"
+    [results]="single"
+    [gradient]="gradient"
+    [xAxis]="showXAxis"
+    [yAxis]="showYAxis"
+    [legend]="showLegend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+    (select)="onSelect($event)"
+  >
+  </ngx-charts-bar-vertical>
+</div>
