--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center" *ngIf="carregou()" >
-    <app-nc-emissor></app-nc-emissor>
+    <app-nc-emissor [size]="[1100,400]"></app-nc-emissor>
 </div>
 
 
