--- a/src/app/pages/dashboards/charts/cost-sector/cost-sector.component.html
+++ b/src/app/pages/dashboards/charts/cost-sector/cost-sector.component.html
@@ -1,13 +1,16 @@
-<div class="content">
-  <div class="mb-5">
-  <p-dropdown
-    [options]="setoresAux"
-    [(ngModel)]="setor"
-    (onChange)="popular()"
-  ></p-dropdown>
-</div>
+<div class="d-flex flex-column justify-content-center align-items-start" style="">
+  <div class="d-flex justify-content-center align-items-center" style="width: 100%;">
+    
+  </div>
+  <div>
+    <p-dropdown
+      [options]="setoresAux"
+      [(ngModel)]="setor"
+      (onChange)="popular()"
+    ></p-dropdown>
+  </div>
 
-<div *ngIf="display">
-  <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
-</div>
+  <div *ngIf="display">
+    <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
+  </div>
 </div>
