--- a/src/app/pages/dashboards/charts/nc-emissor/nc-emissor.component.html
+++ b/src/app/pages/dashboards/charts/nc-emissor/nc-emissor.component.html
@@ -1,14 +1,23 @@
-<ngx-charts-bar-vertical
-  [view]="size"
-  [results]="single"
-  [gradient]="gradient"
-  [xAxis]="showXAxis"
-  [yAxis]="showYAxis"
-  [legend]="showLegend"
-  [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel"
-  [xAxisLabel]="xAxisLabel"
-  [yAxisLabel]="yAxisLabel"
- 
->
-</ngx-charts-bar-vertical>
+<div class="d-flex flex-column align-items-center justify-content-center">
+  <div class="mb-3">
+    <h2>{{ title }}</h2>
+  </div>
+    <p-dropdown
+      [options]="tiposNc"
+      [(ngModel)]="tiposNcAtual"
+      (onChange)="popular()"
+    ></p-dropdown>
+  <ngx-charts-bar-vertical
+    [view]="size"
+    [results]="single"
+    [gradient]="gradient"
+    [xAxis]="showXAxis"
+    [yAxis]="showYAxis"
+    [legend]="showLegend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+  >
+  </ngx-charts-bar-vertical>
+</div>
