--- a/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
+++ b/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
@@ -1,14 +1,25 @@
-<ngx-charts-bar-vertical
-  [view]="size"
-  [results]="single"
-  [gradient]="gradient"
-  [xAxis]="showXAxis"
-  [yAxis]="showYAxis"
-  [legend]="showLegend"
-  [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel"
-  [xAxisLabel]="xAxisLabel"
-  [yAxisLabel]="yAxisLabel"
- 
->
-</ngx-charts-bar-vertical>
+<div class="d-flex flex-column justify-content-center align-items-start">
+  <div class="d-flex justify-content-center" style="width: 100%">
+    <h2>Tipos de Ncs</h2>
+  </div>
+  <div class="mb-5">
+    <p-dropdown
+      [options]="setores"
+      [(ngModel)]="setor"
+      (onChange)="popular()"
+    ></p-dropdown>
+  </div>
+  <ngx-charts-bar-vertical
+    [view]="size"
+    [results]="single"
+    [gradient]="gradient"
+    [xAxis]="showXAxis"
+    [yAxis]="showYAxis"
+    [legend]="showLegend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+  >
+  </ngx-charts-bar-vertical>
+</div>
