--- a/src/app/pages/ncs/create/ncs-create-header/cancel-dialog/cancel-dialog.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/cancel-dialog/cancel-dialog.component.html
@@ -1,5 +1,5 @@
-<p>Deseja cancelar esta não conformidade?</p>
+<p>{{'cancelNC.title'| translate}}</p>
 <div class="d-flex justify-content-between mt-5">
-    <button class="btn btn-primary" (click)="cancelarNc()">Sim, cancelar</button>
-    <button class="btn btn-outline-secondary" (click)="voltar()">Não cancelar</button>
+    <button class="btn btn-primary" (click)="cancelarNc()">{{'cancelNC.accept'| translate}}</button>
+    <button class="btn btn-outline-secondary" (click)="voltar()">{{'newNC.reject'| translate}}</button>
 </div>
