--- a/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="editar-campo">
-    <label for="name">Nome</label>
+    <label for="name">{{'global.contacts.name'| translate}}</label>
     <input
             type="text"
             pInputText
@@ -9,11 +9,11 @@
             #nameCtrl="ngModel"
     />
     <small *ngIf="nameCtrl.invalid && nameCtrl.touched">
-        Por favor insira um nome.
+        {{'global.contacts.invalidName'| translate}}
     </small>
 </div>
 <div class="editar-campo">
-    <label for="email">E-mail</label>
+    <label for="email">{{'global.contacts.email'| translate}}</label>
     <input
             type="email"
             pInputText
@@ -24,11 +24,11 @@
             #emailCtrl="ngModel"
     />
     <small *ngIf="emailCtrl.invalid && emailCtrl.touched">
-        Por favor insira um email válido.
+        {{'global.contacts.invalidEmail'| translate}}
     </small>
 </div>
 <div class="editar-campo">
-    <label for="type">Parceiro</label>
+    <label for="type">{{'global.contacts.partner'| translate}}</label>
     <input
             type="text"
             pInputText
@@ -38,14 +38,14 @@
             #typeCtrl="ngModel"
     />
     <small *ngIf="typeCtrl.invalid && typeCtrl.touched">
-        Por favor insira o tipo de contato.
+        {{'global.contacts.invalidContactType'| translate}}
     </small>
 </div>
 <div class="d-flex justify-content-end editar-buttons">
     <button type="button"
             class="btn btn-outline-dark"
             (click)="cancel()">
-        Cancelar
+        {{'global.cancel'| translate}}
     </button>
     <div class="ml-2 mr-2"></div>
     <button
@@ -54,7 +54,7 @@
             [disabled]="(nameCtrl.invalid) || (emailCtrl.invalid) || (typeCtrl.invalid)"
             (click)="saveContact()"
     >
-        Confirmar
+        {{'global.confirm'| translate}}
         <i class="pi pi-check"></i>
     </button>
 </div>
