--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -1,30 +1,30 @@
 <p-dialog [(visible)]="display">
   <ng-template pTemplate="header">
     <div class="cabecalho">
-      <h1>Editar Contato do Parceiro</h1>
-      <p>Preecha os campos abaixo.</p>
+      <h1>{{'newNC.step1.partner.editTitle'| translate}}</h1>
+      <p>{{'newNC.step1.partner.editSubtitle'| translate}}</p>
     </div>
   </ng-template>
 
   <div class="editar-campo">
-    <label for="">Nome</label>
+    <label for="">{{'global.contact.name'| translate}}</label>
     <input type="text" [(ngModel)]="nonComplicanceService.editarNomeItem" />
   </div>
   <div class="editar-campo">
-    <label for="">Telefone</label>
+    <label for="">{{'newNC.step1.partner.phone'| translate}}</label>
     <input type="text" [(ngModel)]="nonComplicanceService.editarTelefoneItem" />
   </div>
   <div class="editar-campo">
-    <label for="">E-mail</label>
+    <label for="">{{'global.contact.email'| translate}}</label>
     <input type="text" [(ngModel)]="nonComplicanceService.editarEmailItem" />
   </div>
   <div class="d-flex justify-content-end editar-buttons">
     <button type="button" class="btn btn-outline-dark" (click)="hideDialog()">
-      Cancelar
+      {{'global.contact.cancel'| translate}}
     </button>
     <div class="ml-2 mr-2"></div>
     <button type="button" class="btn btn-dark" (click)="editar()">
-      Confirmar <i class="pi pi-check"></i>
+      {{'global.contact.confirm'| translate}} <i class="pi pi-check"></i>
     </button>
   </div>
 </p-dialog>
@@ -32,23 +32,23 @@
 <div class="row mb-0">
   <div class="d-flex col">
     <div class="cabecalho p-0 m-0">
-      <h1>Dados do Parceiro *</h1>
+      <h1>{{'newNC.step1.partner.title'| translate}}</h1>
       <p>
-        Identifique o parceiro responsável pelo produto nesta NC.
+        {{'newNC.step1.partner.subtitle1'| translate}}
         <br>
-        Caso não encontre o parceiro, atualize a base de cadastros.
+        {{'newNC.step1.partner.subtitle2'| translate}}
       </p>
     </div>
     <div class="col-2" id="div-att-col2">
       <p>
-        <i class="pi pi-history"> </i>Última atualização: {{ returnUpdateTime() }}
+        <i class="pi pi-history"> </i>{{'newNC.step1.lastUpdate'| translate}} {{ returnUpdateTime() }}
       </p>
       <a      target="_blank"
               href="ncs/import"
               role="button"
               class="btn btn-dark"
       >
-        Atualizar Cadastros
+        {{'newNC.step1.updateBtn'| translate}}
         <i class="pi pi-download" id="icon-button"></i>
       </a>
     </div>
@@ -59,12 +59,12 @@
 
 <div class=" row-search d-flex mb-2 pl-0">
   <div class="dropdown col ml-0 mt-0 px-0">
-    <label>Tipo de Parceiro *</label>
+    <label>{{'newNC.step1.partner.partnerType'| translate}}</label>
     <select
       [(ngModel)]="nonComplicanceService.nc.tipos_parceiro_item"
       (change)="onChange()"
     >
-      <option [ngValue]="null" disabled selected hidden>Selecione...</option>
+      <option [ngValue]="null" disabled selected hidden>{{'global.select'| translate}}</option>
       <option *ngFor="let tiposAuditoria of tiposParceiro">
         {{ tiposAuditoria }}
       </option>
@@ -90,33 +90,33 @@
             <span class="auto-complete-title">{{ brand.corporate_name }}</span>
             <div class="d-flex">
               <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item == 'Interno'">
-                <span class="auto-complete-label">SETOR</span><br />
+                <span class="auto-complete-label">{{'newNC.step1.partner.sectorUpper'| translate}}</span><br />
                 <span class="auto-complete-item">{{ brand.name }}</span>
               </div>
               <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item != 'Interno'">
-                <span class="auto-complete-label">CÓDIGO</span><br />
+                <span class="auto-complete-label">{{'newNC.step1.partner.codeUpper'| translate}}</span><br />
                 <span class="auto-complete-item">{{ brand.code }}</span>
               </div>
               <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item == 'Interno'">
-                <span class="auto-complete-label">NOME DO RESP.</span><br />
+                <span class="auto-complete-label">{{'newNC.step1.partner.respNameUpper'| translate}}</span><br />
                 <span class="auto-complete-item">{{
                   brand.responsible_name
                 }}</span>
               </div>
               <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item != 'Interno'">
-                <span class="auto-complete-label">NOME</span><br />
+                <span class="auto-complete-label">{{'newNC.step1.partner.nameUpper'| translate}}</span><br />
                 <span class="auto-complete-item">{{
                   brand.responsible_name
                   }}</span>
               </div>
               <div class="mr-4">
-                <span class="auto-complete-label">E-MAIL</span><br />
+                <span class="auto-complete-label">{{'global.contacts.emailUpper'| translate}}</span><br />
                 <span class="auto-complete-item">{{
                   brand.responsible_email
                 }}</span>
               </div>
               <div>
-                <span class="auto-complete-label">TELEFONE</span><br />
+                <span class="auto-complete-label">{{'newNC.step1.partner.phoneUpper'| translate}}</span><br />
                 <span class="auto-complete-item">{{
                   brand.responsible_phone
                 }}</span>
@@ -136,10 +136,10 @@
 <div class="div-ident-parceiro pr-4 pb-0 " *ngIf="hasSelected()">
   <div class="dados-parceiro razao-social py-0 py-1">
     <div *ngIf="!isInterno()" class="d-flex justify-content-between">
-    <h1 >Razão Social</h1>
+    <h1 >{{'newNC.step1.partner.corporateName'| translate}}</h1>
       <p-chip [label]="nonComplicanceService.nc.partner.code" icon="bi bi-ticket-perforated"></p-chip>
     </div>
-    <h1 *ngIf="isInterno()">Setor</h1>
+    <h1 *ngIf="isInterno()">{{'newNC.step1.partner.sector'| translate}}</h1>
     <p>
       {{ nonComplicanceService.nc.partner.corporate_name }}
     </p>
@@ -150,21 +150,21 @@
   <div class="dados-parceiro py-2">
     <div class="dados-contato ">
       <div class="d-flex justify-content-between">
-        <h1>Dados do Contato</h1>
+        <h1>{{'newNC.step1.partner.contactTitle'| translate}}</h1>
         <button
           type="button"
           class="btn btn-dark"
           iconPos="left"
           (click)="showDialog()"
         >
-          <i class="pi pi-pencil"></i>Editar Contato
+          <i class="pi pi-pencil"></i>{{'global.contacts.edit'| translate}}
         </button>
       </div>
       <div class="d-flex justify-content-evenly">
         <div class="contato-info d-flex flex-row">
           <i class="pi pi-user"></i>
           <div>
-            <span class="info-titulo">Nome</span>
+            <span class="info-titulo">{{'global.contacts.name'| translate}}</span>
             <br />
             <span class="info-dados">{{
               nonComplicanceService.nc.partner.responsible_name
@@ -174,7 +174,7 @@
         <div class="contato-info d-flex flex-row">
           <i class="pi pi-phone"></i>
           <div>
-            <span class="info-titulo">Telefone</span>
+            <span class="info-titulo">{{'newNC.step1.partner.phone'| translate}}</span>
             <br />
             <span class="info-dados">{{
               nonComplicanceService.nc.partner.responsible_phone
@@ -184,7 +184,7 @@
         <div class="contato-info d-flex flex-row">
           <i class="pi pi-at"></i>
           <div>
-            <span class="info-titulo">E-mail</span>
+            <span class="info-titulo">{{'global.contacts.email'| translate}}</span>
             <br />
             <span class="info-dados">{{
               nonComplicanceService.nc.partner.responsible_email
