ajustes na responsividade da tela de login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex vh-100">
   <div class="left-side me-2">
     <div class="flex-fill">
-      <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
-          <p class="linha1">Boas vindas ao&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-          <p class="linha2">Sistema de Gestão de Não&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-          <p class="linha3">Conformidades da Electroson&nbsp;&nbsp;</p>
+      <div class="d-flex flex-column min-vh-100 justify-content-center">
+          <p class="linha1">Boas vindas ao</p>
+          <p class="linha2">Sistema de Gestão de</p>
+          <p class="linha3">Não Conformidades</p>
       </div> 
     </div>
   </div>
